ui bug solved, white space issue

--- a/omod/src/main/webapp/resources/styles/main.css
+++ b/omod/src/main/webapp/resources/styles/main.css
@@ -10,6 +10,7 @@ div.doc-viewer {
     border: 1px solid #ccc;
     padding: 5px;
     overflow-x: hidden;
+    white-space:pre-wrap;
     float:left;
     background:white;
 }
